
*** macOS font rendering fix for CJK text

Added =mac-font-use-typo-metrics= patch (from railwaycat/emacs-mac) that fixes line height calculation for mixed CJK and English text. This resolves issues with partial screen rendering in vterm and other applications.

** Improvements

*** Better error messages for incompatible options

The formula now errors out early when icon options (=--with-*-icon= or via =build.yml=) are used with =--with-x11= or =--without-cocoa=, since these builds don't produce =Emacs.app=.

*** Clearer documentation for non-Cocoa builds

Updated option descriptions to clarify that =--with-x11= and =--without-cocoa= produce terminal/X11 builds without =Emacs.app=.

*** Library not loaded errors

Added caveat explaining how to fix "Library not loaded" errors after upgrading dependencies like =tree-sitter= or =libgccjit=: simply run =brew reinstall emacs-plus@XX=.

*** Better Spotlight integration

The =emacs= command now automatically finds =Emacs.app= in =/Applications= or =~/Applications=. This allows you to copy the app for better Spotlight indexing:

#+begin_src bash
cp -r "$(brew --prefix)/opt/emacs-plus@30/Emacs.app" /Applications/
#+end_src

The =emacs= command will continue to work without any manual adjustments.

* 2025-12-26

** Community Patches

*** Window blurring and alpha transparency

New community patch adds support for window blurring and configurable alpha transparency effects.

*** Async process read performance

New community patch improves async process read performance.

* 2025-12-14

** New Features

*** Community patches and icons system

Introduced a new system for community-contributed patches and icons via =~/.config/emacs-plus/build.yml=. This allows users to easily apply patches and icons from a community registry or external URLs.

The =--with-*-icon= options are now deprecated (removal date: 2026-03-14). Please migrate to =build.yml=.

See [[./community/README.md][Community Documentation]] for details.
